--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,6 +7,9 @@ on:
 #  pull_request:
   workflow_dispatch:
 
+env:
+  ANDROID_HOME: ${{ github.workspace }}/android-sdk
+  
 jobs:
   build:
     runs-on: ubuntu-latest
